--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Test1",
+  "name": "test1",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
+    "mobx-state-tree": "^7.0.2",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "2.18.0",
+    "react-native-reanimated": "3.16.7",
+    "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
